# src/routes/user.routes.ts
@@ -6,5 +6,7 @@ const userRoutes = new Hono<{ Bindings: Bindings }>();
 
 userRoutes.get('/', UserController.getUsers);
 userRoutes.post('/', UserController.createUser);
+userRoutes.get('/nonce', UserController.getNonce);
+userRoutes.post('/verify', UserController.verifySignature);
 
 export { userRoutes };
